--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
 
         <section id="me">
-                <h2>About me</h2>
+                <h2>About myself</h2>
                 <p>**Hi there! I'm [Your Name], a passionate web developer with a love for creating stunning digital
                         experiences.**
 
