--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <section id="me">
                 <h2>About myself</h2>
-                <p>**Hi there! I'm [Your Name], a passionate web developer with a love for creating stunning digital
+                <p>**Hi there! I'm Tommy, a passionate web developer with a love for creating stunning digital
                         experiences.**
 
                         With a background in computer science and a keen eye for design, I've been building websites and
