--- a/index.html
+++ b/index.html
@@ -3,36 +3,7 @@
 
 <head>
         <title>Portfolio</title>
-        <style>
-                body {
-                        background-color: pink;
-                }
-
-                section {
-                        padding-top: 30px;
-                        padding-bottom: 30px;
-                }
-
-                nav ul {
-                        display: flex;
-                        margin: 0;
-                        padding: 0;
-                }
-
-                li {
-                        list-style: none;
-                        margin-right: 20px;
-                }
-
-                footer {
-                        display: flex;
-                        background-color: aliceblue;
-                }
-
-                .bg-2 {
-                        background-color: rgba(0, 0, 0, 0.1);
-                }
-        </style>
+        <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
