style landing page

--- a/index.html
+++ b/index.html
@@ -7,49 +7,27 @@
 </head>
 
 <body>
-        <h1>My porfolio</h1>
-        <nav>
-                <ul>
-                        <li>home</li>
-                        <li>me</li>
-                        <li><a href="#skills">skills</a></li>
-                        <li>contact</li>
-                </ul>
-        </nav>
-
+<header>
+                <h1>My porfolio</h1>
+                <nav>
+                        <ul>
+                                <li>home</li>
+                                <li>me</li>
+                                <li><a href="#skills">skills</a></li>
+                                <li>contact</li>
+                        </ul>
+                </nav>
+        </header>
         <section id="me">
                 <h2>About myself</h2>
                 <p>**Hi there! I'm Tommy, a passionate web developer with a love for creating stunning digital
-                        experiences.**
-
-                        With a background in computer science and a keen eye for design, I've been building websites and
-                        applications that
-                        delight users for over 5 years. My expertise
-                        spans the full stack, from frontend development with HTML, CSS, and JavaScript to backend
-                        development with Node.js, Ruby
-                        on Rails, and Python.
-
-                        **I'm all about simplicity, elegance, and user experience.** When I'm not coding, you can find
-                        me experimenting with new
-                        technologies, attending web development
-                        meetups, or hiking in the great outdoors.
-
-                        Some of my favorite projects include:
-
-                        * Building a responsive e-commerce website for a fashion brand
-                        * Creating a real-time chat application using WebSockets and Node.js
-                        * Designing and developing a mobile-first app for a startup
-
-                        **I'm always looking to collaborate with like-minded developers, designers, and entrepreneurs
-                        who share my passion for
-                        creating innovative digital solutions.**
-                </p>
+                        experiences.** </p>
         </section>
         <section id="skills" class="bg-2">
                 <h2>Skills</h2>
                 <article>
                         <h3>Html</h3>
-                        <p>I'm new but very engaged in HTML, it was a pleasure to meet</p>
+                        <p>I'm new but very engaged in <span class="special">HTML</span>, it was a pleasure to meet</p>
                 </article>
                 <article>
                         <h3>CSS</h3>
