--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<header>
+        <header>
                 <h1>My porfolio</h1>
                 <nav>
                         <ul>
@@ -59,6 +59,7 @@
                 </div>
 
         </footer>
+        <script src="index.js"></script>
 </body>
 
 </html>
