feat: text to binary converter

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <section id="me">
                 <h2>About myself</h2>
                 <button id="clickEle">Clicky</button>
+                <input id="onTypeEle" />
+                <h3 id="result"></h3>
                 <p>**Hi there! I'm Tommy, a passionate web developer with a love for creating stunning digital
                         experiences.** </p>
         </section>
