feat: add password check

--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
         </header>
         <section id="me">
                 <h2>About myself</h2>
-                <button id="clickEle">Clicky</button>
+
                 <input id="onTypeEle" />
                 <h3 id="result"></h3>
                 <p>**Hi there! I'm Tommy, a passionate web developer with a love for creating stunning digital
                         experiences.** </p>
         </section>
-        <section id="skills" class="bg-2">
+        <section class="bg-2">
+                <h2>My passwords section</h2>
+                <label>Enter password
+                        <input id="passwordEle" type="password">
+                </label>
+                <button id="clickEle">Check password</button>
+        </section>
+        <section id="skills">
                 <h2>Skills</h2>
                 <article>
                         <h3>Html</h3>
